--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.application.name=wiki
 
 test.hello=Hello
+
+
+#数据库连接信息
+spring.datasource.url=jdbc:mysql://localhost:3306/wiki
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#配置mybatis所有Mapper.xml所在的路径
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
